# obse64-compat

./: .gitignore  CMakeLists.txt  README.md  build.ps1
include/: APIHookManager.h  ConfigurationManager.h  DetoursWrapper.h  ObseGPCompat.h  PathTranslator.h  ProxyLauncher.h  VirtualFileSystem.h  WindowsWrapper.h
libs/Detours/lib/: detours.lib
resources/: version.rc.in
src/: APIHookManager.cpp  ConfigurationManager.cpp  PathTranslator.cpp  ProxyLauncher.cpp  VirtualFileSystem.cpp  main.cpp
